add temperature service

--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =  ArduinoJson@5.13.4
             RTClib@1.2.4 
             Crypto@0.1.3 
             ESPAsyncTCP@1.2.2
+            paulstoffregen/OneWire@2.3.5
             https://github.com/boblemaire/asyncHTTPrequest@1.2.2
 
 # default environment, compile and upload using; `$ pio run -t upload`
@@ -35,7 +36,7 @@ framework = arduino
 lib_deps = ${common.lib_deps}
 upload_speed = 921600
 monitor_speed = 115200
-upload_port = COM3
+;upload_port = COM3
 
 # alternate environment
 
@@ -54,10 +55,9 @@ build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
     -D CORE_3_0
 upload_speed = 921600
 monitor_speed = 115200
-upload_port = COM3
+;upload_port = COM3
 
 # compile and uplod using: `$ pio run -t upload -e latest_stable
-
 
 
 
